# probabilistic-adaptive-control

./: CMakeLists.txt  README.md  package.xml
include/probabilistic_trajectory_tracking/: probabilistic_adaptive_control.h  probabilistic_trajectory_tracking.h  reference_handler.h  utils.h
msg/: Context.msg  ContextArray.msg  Task.msg
src/: pac_node.cpp  probabilistic_adaptive_control.cpp  probabilistic_trajectory_tracking.cpp  reference_handler.cpp
