<?xml version="1.0"?>
<package format="2">
  <name>probabilistic_trajectory_tracking</name>
  <version>0.1.0</version>
  <description>probabilistic_trajectory_tracking</description>
  <maintainer email="julius.jankowski@idiap.ch">Julius Jankowski</maintainer>
  <license>Apache 2.0</license>
  
  <author>Julius Jankowski</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>eigen</build_depend>
  <build_depend>message_generation</build_depend>
  
  <build_export_depend>message_runtime</build_export_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <exec_depend>message_runtime</exec_depend>
</package>
